fixed container overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
-
+.container {
+  width: 100%;
+  max-width: 100vw; /* Asegura que no exceda el ancho de la ventana */
+  overflow-x: hidden; /* Previene el desbordamiento horizontal */
+}
 .home {
   background-image: url("../images/background2.jpeg");
   background-attachment: fixed;
